[project]
name = "loopy"
version = "0.1.0"
description = "Toy event loop"
authors = [
    { name = "Alexis Daboville" }
]
dependencies = [
    "structlog>=24.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"loopy" = "loopy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loopy"]
